# mpv

common/: meson.build
options/: m_option.c  options.c
osdep/mac/: event_helper.swift  libmpv_helper.swift  log_helper.swift  swift_compat.swift
sub/: sd.h  sd_ass.c
video/: mp_image.c
